java/2-containers-1-domain/k8s/javaapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-api
spec:
  type: NodePort
  selector:
    app: java-api
  ports:
  - port: 8080
    targetPort: 8080
